--- a/plugin.yml
+++ b/plugin.yml
@@ -3,18 +3,16 @@ version: 0.0.1
 main: BeeAZ\HumanNPC\Loader
 author: BeeAZ
 api: 5.0.0
-locate: VietNam
-website: https://www.dfmc.site/
 
 commands:
   hnpc:
    description: HumanNPC Commands
-   permission: hnpc.command
+   permission: humannpc.command
   rca:
    description: Rca Commands
-   permission: hnpc.rca
+   permission: humannpc.rca
 permissions:
-  hnpc.command:
+  humannpc.command:
    default: op
-  hnpc.rca:
+  humannpc.rca:
    default: op
